engine-net-2/examples/Errors/AttributeObjectUnknown.grs
new graph "Rules.grg"

exec (n:N,e:E,c:C,tc:TC)=initExtended ;> { c.b = 44 }

quit
